# rust-template

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md  Cargo.toml  README.md  deny.toml  justfile  package.json  release-plz.toml  rustfmt.toml  vite.config.ts
.claude/commands/: sync-template.md
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: merge-group.yml  pull-request.yml  push.yml  release-plz.yml
.just/: cargo.just  git-test.just
.mise/: config.toml
src/: main.rs
