[package]
name = "rust-template"
version = "0.1.0"
edition = "2024"
description = "A template for new Rust projects."
license = "Apache-2.0"
repository = "https://github.com/motlin/rust-template"

[dependencies]

[dev-dependencies]

[profile.release]
lto = "thin"
strip = true

# Lints are configured here rather than in a separate clippy.toml so the policy
# travels with the manifest. Override or extend per project as needed.
[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
